--- a/app/scss/_variable.scss
+++ b/app/scss/_variable.scss
@@ -27,3 +27,14 @@ $c-gray-light: #e6e6e6;
 $c-error: #ff0000;
 $c-bg-error: #fff4f4;
 
+/* fonts */
+$reg: "Segoe UI", sans-serif;
+$bold: "Segoe UI Semibold", sans-serif;
+$font-black: "Segoe UI Black", sans-serif;
+
+/* color */
+$main: #ff7405;
+$white: #fff;
+$black: #000;
+$blue: #448aff;
+$hover: #ff9740;
