--- a/app/scss/style-order.scss
+++ b/app/scss/style-order.scss
@@ -18,8 +18,9 @@
 @import "./dish-add";
 @import "./menu-weekly";
 
-//@import "./header";
-//@import "./banner";
-//@import "./page-title";
-//@import "./steps";
-//@import "./tabs";
+@import "./mixin";
+@import "./header";
+@import "./banner";
+@import "./page-title";
+@import "./steps";
+@import "./tabs";
