--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -1,10 +1,24 @@
-@import "common/_normalize";
-@import "common/_basic";
-@import "common/_fonts";
-@import "common/_variables";
-@import "common/_mixin";
-@import "header";
-@import "banner";
-@import "page-title";
-@import "steps";
-@import "tabs";
+@import "./variable";
+@import "./wrapper";
+@import "./base";
+@import "./order";
+@import "./form";
+@import "./delivery";
+@import "./payment";
+@import "./fonts";
+@import "./radio-indicator";
+@import "./btn";
+@import "./basket";
+@import "./footer";
+@import "./main";
+@import "./flexboxgrid";
+@import "./mixin";
+@import "./header";
+@import "./banner";
+@import "./page-title";
+@import "./steps";
+@import "./tabs";
+
+@import "./dish";
+@import "./product";
+@import "./menu-weekly";
