--- a/app/css/style-order.css
+++ b/app/css/style-order.css
@@ -1,3 +1,5 @@
+/* fonts */
+/* color */
 .wrapper {
   display: -webkit-box;
   display: -webkit-flex;
@@ -29,13 +31,23 @@ html, body {
     html, body {
       width: 1200px; } }
 
+body {
+  font-size: 16px;
+  line-height: 1.25; }
+
 * {
   -webkit-box-sizing: border-box;
           box-sizing: border-box; }
 
-.header {
-  position: relative;
-  z-index: 10; }
+ul {
+  padding: 0;
+  margin: 0;
+  list-style: none; }
+
+a {
+  text-decoration: none; }
+  a:hover {
+    text-decoration: none; }
 
 .order {
   width: 472px;
@@ -828,10 +840,16 @@ html, body {
   -webkit-box-flex: 1;
   -webkit-flex-grow: 1;
       -ms-flex-positive: 1;
-          flex-grow: 1; }
+          flex-grow: 1;
+  display: block; }
   @media screen and (max-width: 1200px) {
     .main {
       width: 1200px; } }
+
+.container {
+  width: 1200px;
+  padding: 0 15px;
+  margin: 0 auto; }
 
 .row {
   -webkit-box-sizing: border-box;
@@ -854,10 +872,6 @@ html, body {
           flex-wrap: wrap;
   margin-right: -1rem;
   margin-left: -1rem; }
-
-@media only screen and (min-width: 62em) {
-  .container {
-    width: 61rem; } }
 
 .col-md,
 .col-md-1,
@@ -1439,3 +1453,461 @@ html, body {
   padding: 30px 0 0; }
   .menu-weekly__order-amount {
     padding: 30px 0 20px; }
+
+.header {
+  height: 80px;
+  padding: 10px 0;
+  position: relative;
+  z-index: 10; }
+  @media screen and (max-width: 1200px) {
+    .header {
+      width: 1200px; } }
+  .header__hold {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: end;
+    -webkit-justify-content: flex-end;
+        -ms-flex-pack: end;
+            justify-content: flex-end;
+    -webkit-box-flex: 1;
+    -webkit-flex-grow: 1;
+        -ms-flex-positive: 1;
+            flex-grow: 1; }
+
+.logo {
+  position: absolute;
+  width: 130px; }
+
+.nav {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
+  height: 60px; }
+  .nav-list {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: end;
+    -webkit-justify-content: flex-end;
+        -ms-flex-pack: end;
+            justify-content: flex-end;
+    width: 100%; }
+    .nav-list__item {
+      display: -webkit-box;
+      display: -webkit-flex;
+      display: -ms-flexbox;
+      display: flex;
+      -webkit-box-align: center;
+      -webkit-align-items: center;
+          -ms-flex-align: center;
+              align-items: center; }
+      .nav-list__item:hover .nav-link__title {
+        color: #ff7404; }
+      .nav-list__item:not(:first-child) {
+        margin: 0 0 0 35px; }
+  .nav-link {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+        -ms-flex-align: center;
+            align-items: center; }
+    .nav-link:hover {
+      color: #ff9740; }
+    .nav-link__icon {
+      display: -webkit-box;
+      display: -webkit-flex;
+      display: -ms-flexbox;
+      display: flex;
+      -webkit-box-pack: center;
+      -webkit-justify-content: center;
+          -ms-flex-pack: center;
+              justify-content: center;
+      -webkit-box-align: center;
+      -webkit-align-items: center;
+          -ms-flex-align: center;
+              align-items: center;
+      margin: 0 11px 0 0;
+      width: 21px;
+      height: 21px; }
+      .nav-link__icon svg {
+        width: 100%;
+        height: 100%;
+        fill: #ff7405; }
+    .nav-link__title {
+      color: #535353;
+      font-family: "Segoe UI", sans-serif;
+      font-size: 14px;
+      letter-spacing: .5px; }
+
+.account {
+  padding: 0 30px; }
+  .account__link {
+    color: #ff7405;
+    font-family: "Segoe UI Semibold", sans-serif;
+    font-size: 14px;
+    letter-spacing: .5px; }
+
+.box-info {
+  position: relative;
+  width: 275px;
+  min-height: 48px;
+  margin: 0 0 0 30px;
+  -webkit-transition: .5s;
+  -o-transition: .5s;
+  transition: .5s; }
+  .box-info__wrap {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 48px;
+    padding: 13px 18px 15px 30px;
+    background: #fff;
+    border: 1px solid #ff7405;
+    -webkit-border-radius: 25px;
+            border-radius: 25px;
+    overflow: hidden; }
+  .box-info:hover .box-info__wrap {
+    height: auto; }
+  .box-info:hover .box-info-current {
+    background-image: url("../img/arrow-top.svg"); }
+  .box-info-current {
+    padding: 0 50px 0 0;
+    background-image: url("../img/arrow-down.svg");
+    -webkit-background-size: 20px 20px;
+            background-size: 20px;
+    background-repeat: no-repeat;
+    background-position: center right; }
+    .box-info-current__title {
+      color: #ff7405;
+      font-family: "Segoe UI", sans-serif;
+      font-size: 16px;
+      letter-spacing: .6px; }
+
+.info-list {
+  padding: 8px 0 2px;
+  background: #fff; }
+  .info-list-link {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+        -ms-flex-align: center;
+            align-items: center;
+    padding: 7px 0; }
+    .info-list-link__icn {
+      width: 20px;
+      height: 20px; }
+    .info-list-link__title {
+      margin: 0 0 0 20px;
+      color: #ff7405;
+      font-family: "Segoe UI", sans-serif;
+      font-size: 14px;
+      letter-spacing: .5px; }
+
+.entered {
+  background: #ff7405;
+  padding: 14px 24px;
+  -webkit-border-radius: 50px;
+          border-radius: 50px; }
+  .entered:hover {
+    background: #ff9740;
+    color: #fff; }
+  .entered__link {
+    color: #fff;
+    letter-spacing: .5px; }
+
+.banner {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: column;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding: 145px 0 187px;
+  background: url("../img/banner.jpg") no-repeat bottom;
+  -webkit-background-size: cover;
+          background-size: cover; }
+  .banner-link {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+        -ms-flex-align: center;
+            align-items: center;
+    text-align: center;
+    margin: 26px auto 0;
+    width: 294px;
+    height: 55px;
+    padding: 0 60px;
+    color: #fff;
+    font-family: "Segoe UI Semibold", sans-serif;
+    font-size: 18px;
+    text-transform: uppercase;
+    letter-spacing: 1.2px;
+    background: #ff7405;
+    -webkit-border-radius: 50px;
+            border-radius: 50px;
+    -webkit-box-shadow: 0 2px 10px 2px rgba(0, 0, 0, 0.2);
+            box-shadow: 0 2px 10px 2px rgba(0, 0, 0, 0.2); }
+    .banner-link:hover {
+      background: #ff9740; }
+
+.title {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: column;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  text-align: center; }
+  .title__item {
+    color: #fff;
+    font-family: "Segoe UI Black", sans-serif;
+    font-size: 36px;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    word-spacing: -5px;
+    line-height: 47px; }
+
+.page-title {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  width: 100%;
+  margin: 0; }
+  .page-title__text {
+    position: relative;
+    display: inline-block;
+    color: #3f3f3f;
+    font-family: "Segoe UI Semibold", sans-serif;
+    font-size: 24px;
+    text-transform: uppercase;
+    letter-spacing: 1px; }
+    .page-title__text:before {
+      content: "";
+      position: absolute;
+      left: -54px;
+      top: 50%;
+      width: 40px;
+      height: 2px;
+      -webkit-transform: translateY(-50%);
+          -ms-transform: translateY(-50%);
+              transform: translateY(-50%);
+      background: -webkit-linear-gradient(left, rgba(255, 255, 255, 0) 0%, #ff7404 100%);
+      background: -webkit-gradient(linear, left top, right top, from(rgba(255, 255, 255, 0)), to(#ff7404));
+      background: -o-linear-gradient(left, rgba(255, 255, 255, 0) 0%, #ff7404 100%);
+      background: linear-gradient(to right, rgba(255, 255, 255, 0) 0%, #ff7404 100%);
+      filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00ffffff', endColorstr='#ff7404',GradientType=1 ); }
+    .page-title__text:after {
+      content: "";
+      position: absolute;
+      right: -49px;
+      top: 50%;
+      width: 40px;
+      height: 2px;
+      -webkit-transform: translateY(-50%);
+          -ms-transform: translateY(-50%);
+              transform: translateY(-50%);
+      background: -webkit-linear-gradient(left, #ff7404 0%, rgba(255, 255, 255, 0) 100%);
+      background: -webkit-gradient(linear, left top, right top, from(#ff7404), to(rgba(255, 255, 255, 0)));
+      background: -o-linear-gradient(left, #ff7404 0%, rgba(255, 255, 255, 0) 100%);
+      background: linear-gradient(to right, #ff7404 0%, rgba(255, 255, 255, 0) 100%);
+      filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ff7404', endColorstr='#00ffffff',GradientType=1 ); }
+    .page-title__text_white {
+      color: #fff; }
+      .page-title__text_white:before {
+        background: -webkit-linear-gradient(left, rgba(255, 255, 255, 0) 0%, white 100%);
+        background: -webkit-gradient(linear, left top, right top, from(rgba(255, 255, 255, 0)), to(white));
+        background: -o-linear-gradient(left, rgba(255, 255, 255, 0) 0%, white 100%);
+        background: linear-gradient(to right, rgba(255, 255, 255, 0) 0%, white 100%);
+        filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00ffffff', endColorstr='#ffffff',GradientType=1 ); }
+      .page-title__text_white:after {
+        background: -webkit-linear-gradient(left, white 0%, rgba(255, 255, 255, 0) 100%);
+        background: -webkit-gradient(linear, left top, right top, from(white), to(rgba(255, 255, 255, 0)));
+        background: -o-linear-gradient(left, white 0%, rgba(255, 255, 255, 0) 100%);
+        background: linear-gradient(to right, white 0%, rgba(255, 255, 255, 0) 100%);
+        filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#00ffffff',GradientType=1 ); }
+
+.steps {
+  padding: 43px 0 120px; }
+  .steps-list {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+    -webkit-justify-content: space-between;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    padding: 75px 0 0; }
+    .steps-list__item {
+      display: -webkit-box;
+      display: -webkit-flex;
+      display: -ms-flexbox;
+      display: flex;
+      -webkit-box-pack: center;
+      -webkit-justify-content: center;
+          -ms-flex-pack: center;
+              justify-content: center;
+      -webkit-flex-basis: 25%;
+          -ms-flex-preferred-size: 25%;
+              flex-basis: 25%; }
+      .steps-list__item:first-child {
+        -webkit-flex-basis: 24%;
+            -ms-flex-preferred-size: 24%;
+                flex-basis: 24%; }
+      .steps-list__item:last-child {
+        -webkit-flex-basis: 26%;
+            -ms-flex-preferred-size: 26%;
+                flex-basis: 26%; }
+  .steps-box {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: column;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+        -ms-flex-align: center;
+            align-items: center; }
+    .steps-box__icon {
+      display: -webkit-box;
+      display: -webkit-flex;
+      display: -ms-flexbox;
+      display: flex;
+      -webkit-box-pack: center;
+      -webkit-justify-content: center;
+          -ms-flex-pack: center;
+              justify-content: center;
+      -webkit-box-align: end;
+      -webkit-align-items: flex-end;
+          -ms-flex-align: end;
+              align-items: flex-end;
+      height: 145px;
+      margin: 0 0 20px; }
+      .steps-box__icon img {
+        width: 100%; }
+      .steps-box__icon_phone {
+        width: 80px; }
+      .steps-box__icon_package {
+        width: 245px; }
+      .steps-box__icon_truck {
+        width: 185px; }
+      .steps-box__icon_man {
+        width: 165px; }
+    .steps-box__desc {
+      padding: 14px 10px 0;
+      margin: 0 10px;
+      color: #4a4a4a;
+      font-family: "Segoe UI", sans-serif;
+      font-size: 16px;
+      text-align: center;
+      border-top: 2px solid #eeeeee; }
+    .steps-box .shevron {
+      position: relative; }
+      .steps-box .shevron:after {
+        content: "";
+        position: absolute;
+        top: -10px;
+        right: -13px;
+        width: 10px;
+        height: 19px;
+        background: url("../img/shevron.png") no-repeat center; }
+
+.tabs {
+  padding: 37px 0 55px;
+  background: #ff7405; }
+
+.tab-content {
+  display: none;
+  padding: 36px 0 0 45px;
+  color: #fff;
+  font-family: "Segoe UI", sans-serif;
+  font-size: 14px;
+  line-height: 28px;
+  letter-spacing: .5px; }
+
+.tab {
+  -webkit-flex-basis: 267px;
+      -ms-flex-preferred-size: 267px;
+          flex-basis: 267px;
+  -webkit-flex-shrink: 0;
+      -ms-flex-negative: 0;
+          flex-shrink: 0;
+  padding: 40px 30px 0 0;
+  margin: 0 0 0 -12px;
+  background: url("../img/shadow.png") no-repeat center right; }
+  .tab__item {
+    margin: 0 0 15px;
+    color: #ffd5b3;
+    font-family: "Segoe UI Semibold", sans-serif;
+    font-size: 16px;
+    letter-spacing: 1px;
+    cursor: pointer; }
+    .tab__item.active {
+      position: relative;
+      color: #fff;
+      cursor: default; }
+      .tab__item.active:after {
+        content: "";
+        position: absolute;
+        right: -16px;
+        top: 50%;
+        -webkit-transform: translateY(-50%);
+            -ms-transform: translateY(-50%);
+                transform: translateY(-50%);
+        width: 8px;
+        height: 14px;
+        background: url("../img/triangle.png") no-repeat center; }
+  .tab-wrap {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex; }
