--- a/app/scss/_base.scss
+++ b/app/scss/_base.scss
@@ -8,11 +8,26 @@ html,body {
   }
 }
 
+body {
+  font-size: 16px;
+  line-height: 1.25;
+}
+
+
 * {
   box-sizing: border-box;
 }
 
-.header {
-  position: relative;
-  z-index: 10;
+ul {
+  padding: 0;
+  margin: 0;
+  list-style: none;
+}
+
+a {
+  text-decoration: none;
+
+  &:hover {
+    text-decoration: none;
+  }
 }
