--- a/app/scss/_order.scss
+++ b/app/scss/_order.scss
@@ -41,6 +41,10 @@
     border-radius: 50%;
     vertical-align: top;
     cursor: pointer;
+
+    &:hover {
+      background: $hover;
+    }
   }
 
   &__minus {
