--- a/app/scss/_dish.scss
+++ b/app/scss/_dish.scss
@@ -140,7 +140,7 @@
         bottom: 0;
         right: 0;
         left: 0;
-        background: rgba(255,116,4,.72) url(/images/check-mark.png) no-repeat center;
+        background: rgba(255,116,4,.72) url(../img/check-mark.png) no-repeat center;
         background-size: 30%;
       }
     }
@@ -335,21 +335,30 @@
 
 .dish-add {
   position: absolute;
-  bottom: 15px;
-  left: 20px;
-  right: 15px;
+  bottom: 0;
+  left: 0;
+  right: -4px;
   display: flex;
   justify-content: space-between;
   outline: none;
   -moz-user-select: none;
 
   &__pointer {
-    padding: 50px 0 0;
+    padding: 47px 0 0;
   }
 }
 
 .dish-add-pointer {
-  display: block;
+  display: inline-block;
+  cursor: pointer;
+  padding: 6px 10px;
+  border-radius: 4px;
+  transition: background 0.2s;
+  user-select: none;
+
+  &:hover {
+    background: rgba(255, 116, 5, 0.05);
+  }
 
   &__text {
     display: inline-block;
@@ -358,13 +367,18 @@
     text-transform: uppercase;
     font-size: 16px;
     vertical-align: middle;
-    margin: 0 3px 0 0;
+    padding: 0 3px 0 0;
   }
 
   &__ico {
     display: inline-block;
     vertical-align: middle;
     padding: 0 0 4px;
+    transform: rotate(-90deg);
+
+    &_active {
+      transform: rotate(0);
+    }
   }
 
   &__arrow {
