--- a/app/scss/_header.scss
+++ b/app/scss/_header.scss
@@ -19,7 +19,9 @@
 .logo {
   display: block;
   position: absolute;
-  width: 130px;
+  width: 174px;
+  top: 0;
+  left: 15px;
 }
 
 .nav {
@@ -89,9 +91,7 @@
   position: relative;
   width: 275px;
   min-height: 48px;
-
   margin: 0 0 0 30px;
-
   transition: .5s;
 
   &__wrap {
@@ -100,13 +100,10 @@
     left: 0;
     width: 100%;
     height: 48px;
-
-    padding: 13px 18px 15px 30px;
-
+    padding: 13px 15px 15px 15px;
     background: #fff;
     border: 1px solid $main;
     border-radius: 25px;
-
     overflow: hidden;
   }
 
@@ -119,12 +116,11 @@
   }
 
   &-current {
-    padding: 0 50px 0 0;
-
+    padding: 0 38px 0 9px;
     background-image: url("../img/arrow-down.svg");
     background-size: 20px;
     background-repeat: no-repeat;
-    background-position: center right;
+    background-position: 220px center;
 
     &__title {
       @include text($main, $reg, 16px);
@@ -135,13 +131,18 @@
 
 .info-list {
   padding: 8px 0 2px;
-
   background: #fff;
 
   &-link {
     display: flex;
     align-items: center;
-    padding: 7px 0;
+    padding: 7px 9px 7px 9px;
+    border-radius: 4px;
+    transition: background 0.2s;
+    
+    &:hover {
+      background: rgba(255, 116, 5, 0.05);
+    }
 
     &__icn {
       width: 20px;
