--- a/app/scss/_flexboxgrid.scss
+++ b/app/scss/_flexboxgrid.scss
@@ -35,6 +35,7 @@
 .col-md-10,
 .col-md-11,
 .col-md-12 {
+  position: relative;
   box-sizing: border-box;
   -ms-flex: 0 0 auto;
   -webkit-box-flex: 0;
