--- a/app/css/style.css
+++ b/app/css/style.css
@@ -1919,7 +1919,6 @@ a {
       height: 461px;
       float: left; }
     .product__wrap-img_fixed {
-      float: none;
       position: fixed;
       top: 0; }
   .product__img {
@@ -2025,3 +2024,117 @@ a {
   padding: 40px 0 0; }
   .menu-weekly__order-amount {
     padding: 30px 0 20px; }
+
+.blog:after {
+  content: '';
+  display: block;
+  clear: both; }
+
+.blog-item {
+  float: left;
+  width: 300px;
+  padding: 15px 15px 25px; }
+  .blog-item__link {
+    text-decoration: none; }
+  .blog-item__img {
+    display: block;
+    width: 100%;
+    margin: 0 auto;
+    vertical-align: bottom;
+    outline: none; }
+  .blog-item__date {
+    display: block;
+    font-size: 12px;
+    font-family: "SUS";
+    color: #878787;
+    padding: 9px 0 8px; }
+  .blog-item__title {
+    display: block;
+    font-size: 18px;
+    font-family: "SUB";
+    padding: 0 0 7px;
+    line-height: 23px;
+    letter-spacing: .02em;
+    color: #3f3f3f;
+    margin: 0; }
+  .blog-item__description {
+    display: block;
+    font-size: 13px;
+    line-height: 18px;
+    padding: 0 0 6px;
+    letter-spacing: .025em;
+    position: relative;
+    max-height: 77px;
+    overflow: hidden; }
+    .blog-item__description * {
+      margin: 0; }
+    .blog-item__description h2 {
+      font-size: 16px;
+      padding: 6px 0; }
+    .blog-item__description h3 {
+      font-size: 16px;
+      padding: 3px 0; }
+  .blog-item__more {
+    display: block;
+    font-size: 14px;
+    font-family: "SUS";
+    color: #ff7404;
+    padding: 6px 0 5px;
+    letter-spacing: .02em;
+    text-decoration: none; }
+
+.blog__title {
+  font-size: 20px;
+  font-family: "SUS";
+  text-transform: uppercase;
+  color: #3f3f3f;
+  text-align: center;
+  margin: 0;
+  padding: 10px 0 20px; }
+
+.blog-content {
+  padding: 0 0 10px; }
+  .blog-content h1 {
+    font-size: 20px;
+    text-transform: uppercase;
+    font-family: "SUS";
+    text-align: center;
+    padding: 16px 0;
+    margin: 0;
+    letter-spacing: 0.05em;
+    font-weight: normal; }
+  .blog-content h2 {
+    font-size: 18px;
+    font-family: "SUS";
+    padding: 6px 0;
+    margin: 0;
+    letter-spacing: 0.05em;
+    font-weight: normal; }
+  .blog-content h3 {
+    font-size: 16px;
+    font-family: "SUS";
+    padding: 3px 0;
+    margin: 0;
+    letter-spacing: 0.05em;
+    font-weight: normal; }
+  .blog-content img {
+    width: 100%;
+    height: auto; }
+  .blog-content p {
+    font-size: 14px;
+    font-family: "SUS";
+    line-height: 21px;
+    padding: 0 0 6px;
+    letter-spacing: .025em;
+    margin: 5px 0; }
+  .blog-content a {
+    text-decoration: underline;
+    color: #ff7404; }
+  .blog-content small {
+    display: block;
+    font-size: 12px;
+    font-family: "SUS";
+    color: #878787;
+    padding: 9px 0 8px; }
+  .blog-content ul, .blog-content ol {
+    margin: 0; }
